# webby-cpp

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  conanfile.txt  main.cpp
static/: app.css
templates/: error.html  index.html  property-edit.html
templates/fragments/: properties-list.html
